--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +23,9 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.5.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
+
